# recall

./: CLAUDE.md  Cargo.toml  README.md  flake.nix  result
docs/: ARCHITECTURE.md  DEVELOPMENT.md
src/: config.rs  embedder.rs  main.rs  mcp.rs  reranker.rs  store.rs  watcher.rs
