[package]
name = "memory-search"
version = "0.1.0"
edition = "2021"
description = "Semantic memory search CLI with token-efficient retrieval"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tiktoken-rs = "0.6"
glob = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"
dirs = "5"
