[package]
name = "recall"
version = "0.1.0"
edition = "2021"
description = "Semantic memory search CLI with token-efficient retrieval"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.7", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tiktoken-rs = "0.6"
glob = "0.3"
notify = "6"
notify-debouncer-mini = "0.4"
dirs = "5"
toml = "0.8"
claude-agent-sdk = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
